2005-05-18  Don Allingham  <don@gramps-project.org>
	* src/dates/Date_de.py: handle dates in the form of dd. mon year

2005-05-18  Richard Bos  <radoeka@xs4all.nl>
	* src/data/gramps.desktop: Add Dutch strings.

2005-05-18  James Treacy  <treacy@debian.org>
	* src/data/tips.xml: Update and rework.

2005-05-18  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py: Use class names for internal work; Rework
	ID-based filters to use gramps-id instead of a handle.
	* src/plugins/FilterEditor.py: Use class names for internal work.
	* src/po/template.po: Update for 2.0.1.
	* src/gramps_main.py (open_example): Add example database funciton.
	* NEWS: Update.
	* src/po/ru.po: Partial update for 2.0.1.

2005-05-18  Don Allingham  <don@gramps-project.org>
	* src/ReadGedcom.py: grab description for birth and death events
	* src/WriteGedcom.py: export description for birth and death events
	* example/gedcom/sample.ged: add test case

2005-05-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GrampsInMemDB.py: Emit the *-delete signals correctly.
	* src/GrampsDbBase.py: Emission of the *-update/*-add signals should not depend
	on the existance of a transaction.

2005-05-18  Don Allingham  <don@gramps-project.org>
	* src/plugins/FilterEditor.py: sort entries in Add Rule dialog

2005-05-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GrampsBSDDB.py, src/GrampsDbBase.py, src/GrampsInMemDB.py,
	  src/RelLib.py: Catch invalid arguments instead of crashing.
	TODO: raise TypeError or HandleError instead of simply returning?

	* src/plugins/TestcaseGenerator.py: Added debbuging helpers for signal emissions

2005-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py: Change filter rule names to make them consistent.
	* src/gramps_main.py: Change filter names to make them consistent.

	* src/Date.py: Import gettext.
	* src/DateDisplay.py: Import gettext.
	* src/GenericFilter.py: Support existing custom_filters.xml files