@@ -1,3 +1,9 @@
+2005-05-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/GenericFilter.py: Catch invalid input in some filters;
+	(old_names_2_class): Add one name for full 1.0.11 compatibility;
+	(FilterParser): Properly catch invalid rule names and invalid
+	module/class names.
+
 2005-05-18  Don Allingham  <don@gramps-project.org>
 	* src/dates/Date_de.py: handle dates in the form of dd. mon year
 
